--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -40,6 +42,8 @@
     "gh-pages": "^6.0.0",
     "jsdom": "^22.1.0",
     "react-router-dom": "^6.16.0",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "vite": "^4.4.5",
     "vitest": "^0.34.6"
   }
