--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://maksymopanasenko.gitpub.io/app-shop-react",
+  "homepage": "https://maksymopanasenko.github.io/app-shop-react",
   "name": "hw-2",
   "private": true,
   "version": "0.0.0",
